--- a/src/LivreBundle/Resources/config/routing.yml
+++ b/src/LivreBundle/Resources/config/routing.yml
@@ -5,7 +5,11 @@ livre_homepage:
 livre_mabiblio:
     path: /mabiblio
     defaults: { _controller: LivreBundle:Default:mabiblio }
-    
+
 livre_propos:
     path: /a_propos
     defaults: { _controller: LivreBundle:Default:propos }
+
+livre_ajout:
+    path: /ajout
+    defaults: { _controller: LivreBundle:Default:ajout }
