--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -20,22 +20,28 @@ security:
         main:
             pattern: ^/
             form_login:
-                check_path: /login_check
-                login_path: /login
+                check_path: fos_user_security_check
+                login_path: fos_user_security_login
                 provider: fos_userbundle
+                use_forward: false
+                use_referer: true
+                failure_path: null
+                default_target_path: livre_homepage
             logout:
-               path:    /logout
-               target: /
+               path:    fos_user_security_logout
+               target: livre_homepage
               # provider: fos_userbundle
               # csrf_provider: form.csrf_provider
 
             anonymous:    true
 
     access_control:
-       - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-       - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-       - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+       - { path: ^/connexion$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+       - { path: ^/inscription, role: IS_AUTHENTICATED_ANONYMOUSLY }
+       - { path: ^/reset, role: IS_AUTHENTICATED_ANONYMOUSLY }
        - { path: ^/admin/, role: ROLE_ADMIN }
+       - { path: ^/profil, role: IS_AUTHENTICATED_FULLY }
+       - { path: ^/deconnexion$, role: IS_AUTHENTICATED_FULLY }
             # activate different ways to authenticate
 
             # http://symfony.com/doc/current/security.html#a-configuring-how-your-users-will-authenticate
