--- a/src/UserBundle/Resources/config/routing.yml
+++ b/src/UserBundle/Resources/config/routing.yml
@@ -2,14 +2,6 @@ user_homepage:
     path:     /id
     defaults: { _controller: UserBundle:User:user }
 
-user_inscription:
-    path: /inscription
-    defaults: { _controller: UserBundle:User:inscription}
-
-user_connexion:
-    path: /connexion
-    defaults: { _controller: UserBundle:User:connexion}
-    
 fos_user_security:
     resource: "@FOSUserBundle/Resources/config/routing/security.xml"
 
@@ -19,7 +11,9 @@ fos_user_profile:
 
 fos_user_register:
     resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
-    prefix: /register
+    prefix: /inscription
+
+
 
 fos_user_resetting:
     resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
