--- a/src/UserBundle/Resources/config/services.yml
+++ b/src/UserBundle/Resources/config/services.yml
@@ -2,3 +2,7 @@ services:
 #    user.example:
 #        class: UserBundle\Example
 #        arguments: ["@service_id", "plain_value", "%parameter%"]
+#    user.form.registration:
+#        class: UserBundle\Form\RegistrationType
+#        tags: 
+#            - { name: form.type, alias: user_user_registration }
