--- a/src/LivreBundle/Resources/config/routing.yml
+++ b/src/LivreBundle/Resources/config/routing.yml
@@ -17,3 +17,8 @@ livre_ajout:
 livre_mabiblio:
     path: /mabiblio
     defaults: { _controller: LivreBundle:Default:mabiblio }
+    
+livre_livre:
+    path: /livre/{id}
+    defaults: { _controller: LivreBundle:Default:livre }
+    
