--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -37,4 +37,8 @@ services:
         class: AppBundle\Form\RegistrationType
         tags:
             - { name: form.type, alias: app_user_registration }
-            
+    
+    app.profile.form.type:
+        class: AppBundle\Form\ProfileFormType
+        tags:
+            - { name: form.type, alias: app_user_profile }
