--- a/composer.json
+++ b/composer.json
@@ -26,6 +26,7 @@
         "friendsofsymfony/user-bundle": "* dev-master",
         "incenteev/composer-parameter-handler": "^2.0",
         "kriswallsmith/assetic": "dev-master",
+        "maxmind/geoip": "dev-master",
         "sensio/distribution-bundle": "^5.0.19",
         "sensio/framework-extra-bundle": "^3.0.2",
         "symfony/assetic-bundle": "dev-master",
