--- a/app/config/config_prod.yml
+++ b/app/config/config_prod.yml
@@ -15,8 +15,9 @@ monolog:
             handler: nested
         nested:
             type: stream
-            path: '%kernel.logs_dir%/%kernel.environment%.log'
+            #path: '%kernel.logs_dir%/%kernel.environment%.log'
             level: debug
+            path: 'php://stderr'
         console:
             type: console
             process_psr_3_messages: false
